--- a/playbook.yml
+++ b/playbook.yml
@@ -3,6 +3,7 @@
   become: yes
   roles:
     - role: geerlingguy.pip
+    - role: geerlingguy.docker
     
   tasks:
     - name: Install Docker on webservers
