--- a/requirements.yml
+++ b/requirements.yml
@@ -2,3 +2,5 @@ roles:
   # Install a role from Ansible Galaxy.
   - name: geerlingguy.pip
     version: 3.0.1
+  - name: geerlingguy.docker
+    version: 4.2.3
