--- a/playbook.yml
+++ b/playbook.yml
@@ -11,7 +11,7 @@
   #inserire task per la copia dei file dockercompose sulla macchina di destinazione
   - name: Deploy Redmine
   #modificar il comando per utilizzare un file docker compose e carica le varibili da un env file
-    ansible.builtin.command: docker run -d --name hexlet-redmine redmine
+    ansible.builtin.command: docker run -d -p 3000:3000  --name some-redmine redmine
     tags: 
       - deploy
 
