--- a/requirements.yml
+++ b/requirements.yml
@@ -1,8 +1,7 @@
 roles:
-  # Install a role from Ansible Galaxy.
   - name: geerlingguy.pip
-  - name: geerlingguy.docker
-  - name: datadog.datadog
+  #- name: geerlingguy.docker
+  #- name: datadog.datadog
   
 collections:
   - community.docker
