--- a/playbook.yml
+++ b/playbook.yml
@@ -1,8 +1,12 @@
 - name: Main playbook
-  hosts: webservers
+  hosts: all
   become: yes
+  vars_files:
+    - group_vars/webservers/vars.yml
+ 
   roles:
     - role: geerlingguy.pip
+    - role: DataDog.datadog
   
   tasks:
   - name: Check if Docker is running
@@ -21,25 +25,51 @@
       state: started
     when: docker_info.rc == 0
 
-  #TO-DO dichiarare le variabili per il template nel file "valut.yml"
+  # Variabili dichiarate all'interno del file dedicato alle variabili
   - name: Copy  file
     template:
       src:  ./templates/.env.j2
       dest: ~/.env
       tags:
       - deploy
+    vars_files:
+      - group_vars/webservers/vars.yml
 
-  #Avvio il container redmine e inietto le variqabili d'ambiente sulla base dellevariabili criptate ne valut
+  # Avvio il container redmine e inietto le variqabili d'ambiente sulla base dellevariabili criptate ne valut
+  # TODO Come passare la variabile criptata a il docredmine? 
   - name: Deploy Redmine
     community.docker.docker_container:
       name: hexlet-redmine
       image: redmine
       ports:
-        - "80:3000"
+        - "{{ porthost }}:{{ portcontainer }}"
       env_file: "~/.env"
       detach: yes
       tags:
       - deploy
+      vars_files:
+      - group_vars/webservers/vars.yml
+      - group_vars/valut.yml
+  
+  # TODO Installare e configurare l'agent datadog
+  - name: Install Datadog Agent
+    ansible.builtin.apt:
+      name: datadog-agent
+      state: present
+
+  - name: Create a metric monitor
+    community.general.datadog_monitor:
+      type: "metric alert"
+      name: "Test monitor"
+      state: "present"
+      renotify_interval: 30
+      renotify_occurrences: 1
+      renotify_statuses: ["warn"]
+      notification_preset_name: "show_all"
+      query: "datadog.agent.up.over('host:host1').last(2).count_by_status()"
+      notification_message: "Host [[host.name]] with IP [[host.ip]] is failing to report to datadog."
+      api_key: "9775a026f1ca7d1c6c5af9d94d9595a4"
+      app_key: "87ce4a24b5553d2e482ea8a8500e71b8ad4554ff"
 
 
 
