--- a/playbook.yml
+++ b/playbook.yml
@@ -22,6 +22,7 @@
       ports:
         - "{{ porthost }}:{{ portcontainer }}"
       env_file: "~/.env"
+      restart_policy: always
       detach: yes
     tags:
     - deploy
