--- a/playbook.yml
+++ b/playbook.yml
@@ -6,7 +6,8 @@
     - role: geerlingguy.pip
   
   tasks:
-  - name: Copy  file
+
+  - name: Copy file
     template:
       src:  ./templates/.env.j2
       dest: ~/.env
@@ -25,13 +26,9 @@
     tags:
     - deploy
 
-
-  - name: Import the Datadog Agent role from the Datadog collection
-    import_role:
-      name: datadog.datadog
-  vars:
-    datadog_api_key: "{{ datadog_api_key }}"
-
-
-
+- name: Instsall Datadog Agent on servers
+  hosts: webservers
+  roles:
+    - { role: datadog.datadog, become: yes }
+  
        
