--- a/roles/redmine_deploy/tasks/main.yml
+++ b/roles/redmine_deploy/tasks/main.yml
@@ -1,2 +1,35 @@
----
-# tasks file for roles/redmine_deploy
+
+- name: Riavvia il container Docker
+  docker_container:
+    name: hexlet-redmine
+    state: stopped
+  tags:
+    - refresh-params
+
+- name: Copy file
+  template:
+    src:  ./templates/.env.j2
+    dest: ~/.env
+  tags:
+   - refresh-params
+   - deploy
+   
+- name: Riavvia il container Docker
+  docker_container:
+    name: hexlet-redmine
+    state: started
+  tags:
+    - refresh-params
+
+
+- name: Deploy Redmine
+  community.docker.docker_container:
+    name: hexlet-redmine
+    image: redmine
+    ports:
+      - "{{ porthost }}:{{ portcontainer }}"
+    env_file: "~/.env"
+    restart_policy: always
+    detach: yes
+  tags:
+   - deploy
