--- a/roles/redmine_deploy/meta/main.yml
+++ b/roles/redmine_deploy/meta/main.yml
@@ -14,7 +14,7 @@ galaxy_info:
   # - GPL-3.0-only
   # - Apache-2.0
   # - CC-BY-4.0
-  license: license (GPL-2.0-or-later, MIT, etc)
+  license: license  MIT
 
   min_ansible_version: 2.1
 
@@ -28,7 +28,7 @@ galaxy_info:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
   platforms:
-  - name: Fedora
+  - name: Ubuntu
     versions:
     - all
   #   - 25
